--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -223,9 +223,23 @@ Whenever you add a time with the prefix c/, the format should be dd/MM/yyyy HHmm
 Adds a new project meeting to the current working project.  +
 Format: `Format: addProjectMeeting [c/ dd/MM/yyyy HHmm] [s/MEETING_DESCRIPTION]`
 
-Example:
+`dd/MM/yyyy HHmm` refers to the date and time the meeting is to be held.
+`MEETING_DESCRIPTION` refers to the purpose of the meeting.
 
-* `addProjectMeeting c/29/09/2019 1900 s/milestone discussion`
+Example: +
+Let's say that you plan to have a meeting on the 19th November 2019, you want to keep track of this meeting
+by recording it down in the MyProject app.
+
+To add a project meeting:
+
+1. Type `addProjectMeeting c/19/11/2019 1300 s/DIscussion on version 2` and press enter to execute it.Note that
+this project meeting will be held after the 4th meeting on 16/11/2019 1700 and before the 5th meeting on 29/11/2019 1300.
+image:addProjectMeeting1.png[]
+
+2. Success message with the respective information about the meeting will be displayed. The meeting added will
+be automatically sorted according to the dates and times in ascending order. Thus, the new meeting added will
+be placed as number 5.
+image:addProjectMeeting2.png[]
 
 // end::addProjectMeeting[]
 
@@ -440,9 +454,16 @@ Do keep in mind that only the user Account in our current version is only compat
 Signs in to the your email account. +
 Format: `signIn ac/ACCOUNT_EMAIL_ADDRESS pa/PASSWORD`
 
+`ACCOUNT_EMAIL_ADDRESS` refers to the sender's/user's email address.
+`PASSWORD` refers to the password to the sender's/user's email address.
+
 Example:
 
 * `signIn ac/example@gmail.com pa/12345678`
+
+
+[IMPORTANT]
+Please Turn on the access to less secure app in your account's security setting.
 
 [NOTE]
 This command is required to be executed before the remainder of the email commands can be executed. +
@@ -458,7 +479,11 @@ Example:
 
 ==== Send an email: `sendMail`
 Sends an email to the specified person in your contacts. +
-Format: `sendMail r/RECIPIENT_OF_EMAIL su/SUBJECT me/MESSAGE_BODY`
+Format: `sendMail r/RECIPIENT_EMAIL su/SUBJECT me/MESSAGE_BODY`
+
+`RECIPIENT_EMAIL` refers to the email address of the recipients. +
+`SUBJECT` refers to the email header. +
+`MESSAGE_BODY` refers to the email body.
 
 Example:
 
@@ -472,12 +497,27 @@ We will not check the correctness of the member's email address
 Sends an email to all members in the current working project. +
 Format: `broadcastMail su/SUBJECT me/MESSAGE_BODY`
 
-Example:
-
-* `broadcastMail su/CS2103T me/added new Task`
+`SUBJECT` refers to the email header. +
+`MESSAGE_BODY` refers to the email body.
 
 [NOTE]
 We will not check the correctness of the members' email address
+
+Example:
+Let's say that a new task has just been added and you want to inform your group members of the new task. Instead of switching to another
+application to inform your group members, you can simply use the `broadcastMail` command to inform everyone in the group.
+
+To broadcast Email:
+
+1. Type `broadcastMail su/New Task Added me/Finalise UG and DG before 17th November` and press enter to execute it.
+Note that the `SUBJECT` will be sent as the email header and the `MESSAGE_BODY` will be send as the email body.
+image:broadcastMail1.png[]
+
+2. A success message will be displayed in the box saying "Reminders has been sent!"
+image:broadcastMail2.png[]
+
+3. Members will receive the email that looks like the following:
+image:broadcastMail3.png[]
 
 ==== Send reminder: `sendReminder` [Checkout]
 
@@ -486,12 +526,27 @@ Format: `sendReminder`d/DURATION
 
 `DURATION` is the number of days from the current time within which the Tasks are due and The Meetings are held.
 
-Example:
-
-* `sendReminder d/3`
-
 [NOTE]
 We will not check the correctness of the members' email address
+
+Example: +
+Let's say that you have several meetings and task for the coming week, and you want to remind your group of the upcoming meetings
+and the tasks that are supposed to be done by the week.
+
+Instead of typing all the meetings and tasks for the coming week all over again, you can just easily send these lists to their email
+addresses from the application.
+
+To send reminder:
+
+1. Type `sendReminder d/7` and press enter to execute it.Note that the date at the time this screenshot was taken is 10/11/2019, thus,
+only meeting meetings 2-4 and task 1-3 will be sent as reminders to the members.
+image:sendReminder1.png[]
+
+2. A success message will be displayed in the box saying "Reminders has been sent!"
+image:sendReminder2.png[]
+
+3. Members will receive an email with the tasks due and meetings happening within the next 7 days.
+image:sendReminder3.png[]
 
 // end::email[]
 
