--- a/docs/team/philipalexanderb.adoc
+++ b/docs/team/philipalexanderb.adoc
@@ -13,11 +13,15 @@ My team of 4 NUS SoC students and I were tasked to enhance a command line addres
 * Keep track of project's finances
 * Record meeting minutes
 * Keep track of ongoing and upcoming tasks
-* Send out reminders and broadcast email for important announcements (My Contributions)
+* Send out reminders for upcoming meetings and tasks
+* Broadcast email for important announcements (My Contributions)
 
-This is what our project main page looks like:
+These are what our MyProject pages look like:
 
-.Graphical User Interface for MyProject
+.Graphical User Interface for MyProject home page
+image::UIMainPage.png[]
+
+.Graphical User Interface for MyProject project page
 image::Ui.png[]
 
 My role was to design email related features. The following sections illustrate these enhancements in more detail, as well as the relevant documentation
@@ -62,7 +66,7 @@ more email domains which users wish to use as well as send attachments. Overall,
 are sufficient for the optimisation of the team leaders' works.
 
 ==== Credits
-Credits to the https://javaee.github.io/javamail/ for providing the JavaMail library and the javax.Mail API.
+Credits to https://javaee.github.io/javamail/ for providing the JavaMail library and the javax.Mail API.
 
 === Secondary Enhancement - Meeting attribute in the project.
 
@@ -88,7 +92,7 @@ added by the user will automatically be sorted based on the meeting time (earlie
 *** Tested team members' features and reported bugs for amendment.
 *** Implemented Time class which are widely used in the project.
 ** Documentation
-*** Proof-reading the project's User's Guide and Developer's Guide
+*** Proof-reading the project's User Guide and Developer Guide
 
 == Contributions to the User Guide
 
@@ -110,7 +114,7 @@ include::../UserGuide.adoc[tag=email]
 |===
 |_Below is the section of developer guide that I contributed for my features._
 |===
-include::../DeveloperGuide.adoc[tag=sendReminder]
-
 include::../DeveloperGuide.adoc[tag=addProjectMeeting]
-
+include::../DeveloperGuide.adoc[tag=broadcastMail]
+include::../DeveloperGuide.adoc[tag=sendReminder]
+include::../DeveloperGuide.adoc[tag=signIn]
