--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -466,7 +466,7 @@ Additionally, it implements the following operation:
 
 * `Notification#eatenBreakfast` -- returns a boolean value to indicate have the user eaten their breakfast.
 
-* `Notification#eatenLunch` -- returns a boolean value to indicate have the user eaten their lucnh.
+* `Notification#eatenLunch` -- returns a boolean value to indicate have the user eaten their lunch.
 
 * `Notification#eatenDinner` -- returns a boolean value to indicate have the user eaten their dinner.
 
